--- a/app/frontend/templates/frontend/index.html
+++ b/app/frontend/templates/frontend/index.html
@@ -14,6 +14,7 @@
     {% load static %}
 </head>
 <body>
+    {% csrf_token %}
     <div id="app"></div>
     <script src="{% static 'frontend/main.js' %}"></script>
 </body>
